--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="parcial11.html">parcial 1</a>
     <header>
         <nav>
             <h1 id="logo">SAVIPROD</h1>
